--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,7 @@
 /* Our App */
 body {
-    font-family: 'Montserrat', sans-serif; 
+    font-family: 'Montserrat', sans-serif;
+    background-color: #F6F6FA;
 }
 
 .app-wrapper {
@@ -8,6 +9,7 @@ body {
     flex-direction: row-reverse;
     width: 1200px;
     margin: 40px auto;
+    background-color: #FFF;
 }
 
 /* Sidebar Styles*/
@@ -54,6 +56,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 24px;
+    text-decoration: none;
 }
 
 .contacts-linkedin {
@@ -193,4 +196,287 @@ body {
 /* Main content Styles */
 .right-side-container {
     padding-left: 88px;
+    padding-top: 80px;
+    padding-right: 40px;
+    padding-bottom: 180px;
+}
+
+.about-me-profession {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.about-me-name {
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: -10px;
+}
+
+.about-me-description {
+    color: #595959;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin-top: -15px;
+}
+
+.tools-section {
+    margin-top: 40px;
+}
+
+.tools-header {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.tools-list {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin-top: -10px;
+    margin-left: -15px;
+}
+
+.certification-section {
+    margin-top: 40px;    
+}
+
+.certification-header {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;    
+}
+
+.certification-item {
+    color: #6096FF;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration: none;       
+}
+
+.certification-list {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin-top: -10px; 
+    margin-left: -15px;   
+}
+
+.internship-section {
+    margin-top: 40px;
+}
+
+.internship-header {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.internship-role {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: -10px;
+}
+
+.internship-company {
+    color: #6096FF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 8px;
+    text-decoration: none;
+}
+
+.internship-time {
+    color: #A8A8A8;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: -10px;
+}
+
+.internship-list {
+    color: #595959;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    margin-left: -15px;
+    margin-top: -5px; 
+}
+
+.work-experience-section {
+    margin-top: 40px;    
+}
+
+.work-experience-header {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;    
+}
+
+.work-experience-role {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: -10px;
+}
+
+.work-experience-company {
+    color: #6096FF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 8px;
+    text-decoration: none;    
+}
+
+.work-time {
+    color: #A8A8A8;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: -10px; 
+}
+
+.work-description {
+    color: #595959;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    margin-top: -5px;     
+}
+
+.work-experience-list {
+    color: #595959;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+    margin-left: -15px;
+    margin-top: -5px;     
+}
+
+.nd-work-experience-role {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 15px;    
+}
+
+.nd-work-experience-company {
+    color: #6096FF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 8px;
+    text-decoration: none;      
+}
+
+.nd-work-time {
+    color: #A8A8A8;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: -10px;    
+}
+
+.education-section {
+    margin-top: 40px;
+}
+
+.education-header {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: -10px;      
+}
+
+.education-school {
+    color: #6096FF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration: none;     
+}
+
+.education-time {
+    color: #A8A8A8;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: -8px;        
+}
+
+.education-profile {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: -16px;       
+}
+
+.extracurricular-activities-section {
+    margin-top: 40px;
+}
+
+.extracurricular-activities-header {
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;      
+}
+
+.extracurricular-activities-diploma {
+    color: #6096FF;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: -10px;     
+}
+
+.extracurricular-activities-time {
+    color: #A8A8A8;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: -6px;      
+}
+
+.extracurricular-activities-description {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: -14px;     
 }
